v1.2 - Добавил клавиатуру на команды "Предметы", "Команды", "Забудь меня", "Без пустых отчетов", "С пустыми отчетами" - Новому участнику старой группы теперь не будет выводиться последний отчет
- Перенес дату следующего обновления в конец отчета
- Разгрузил Main

Исправил баги:
- Другой пользователь из той же группы мог стать лидером в любой момент